--- a/ui/ui_model.html
+++ b/ui/ui_model.html
@@ -1,54 +1,8 @@
 <html lang="en">
     <head>
         <title>RaspiMote ─ Config</title>
-        <style>
-            body {
-                margin: 10px;
-                padding: 0px;
-                background-color: #929292
-            }
-            .container {
-                width: 100%;
-                height: 100%;
-                padding: 0px;
-            }
-            .container .upbar {
-                background-color: #929292;
-                height: 40%;
-            }
-            .container .content {
-                background-color: #FFFFFF;
-                height: 60%;
-                text-align: center;
-            }
-            .container .text {
-                width: 50%;
-                font-size: 4vw;
-                text-align: center;
-                font-family: "Open Sans";
-                font-weight: bold;
-                color: #900C3F;
-            }
-            .container .logo {
-                width: 50%;
-                text-align: center;
-            }
-            .container .logo2 {
-                width: 30%;
-                margin: 2%;
-            }
-            option, select, input, button {
-                font-size: 20px;
-                width: 150px;
-                font-family: "Open Sans";
-            }
-            p {
-                font-size: 5px;
-            }
-            #typeButton, #buttonPressKey, #buttonKeyValidate, #buttonTypeText, #buttonTextValidate, #buttonCustomFunction, #buttonCustomValidate {
-                display: none;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
+        <script src="showHide.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -155,25 +109,7 @@
                 </td>
             </tr>
         </table>
-        <script>
-            function showButton(element) {
-                document.getElementById('typeButton').style.display = element.value == "gpio_13" ? 'block' : 'none';
-            }
-            function showButtonPlus(element) {
-                document.getElementById('buttonPressKey').style.display = element.value == "key" ? 'block' : 'none';
-                document.getElementById('buttonTypeText').style.display = element.value == "text" ? 'block' : 'none';
-                document.getElementById('buttonCustomFunction').style.display = element.value == "custom" ? 'block' : 'none';
-            }
-            function buttonKeyValidation(element) {
-                document.getElementById('buttonKeyValidate').style.display = element.value != "none" ? 'block' : 'none';
-            }
-            function buttonTextValidation(element) {
-                document.getElementById('buttonTextValidate').style.display = element.value != "" ? 'block' : 'none';
-            }
-            function buttonCustomValidation(element) {
-                document.getElementById('buttonCustomValidate').style.display = element.value != "" ? 'block' : 'none';
-            }
-        </script>
+        
     </body>
 
 </html>
