UI - Changed image origin

--- a/ui/ui_model.html
+++ b/ui/ui_model.html
@@ -16,7 +16,7 @@
                                 RaspiMote ─ Config
                             </td>
                             <td class="logo">
-                                <img src="/media/flaunay/DATA/RaspiMote/logo/RaspiMote_logo_500px.png" class="logo2">
+                                <img src="../logo/RaspiMote_logo_500px.png" class="logo2">
                             </td>
                         </tr>
                     </table>
