--- a/ui/ui_model.html
+++ b/ui/ui_model.html
@@ -1,8 +1,11 @@
 <html lang="en">
     <head>
         <title>RaspiMote ─ Config</title>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <script src="showHide.js" type="text/javascript"></script>
+        <script src="saveButton.js" type="text/javascript"></script>
+        <script src="jquery-3.5.1.min.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -80,7 +83,7 @@
                             </select>
                             <div id="buttonKeyValidate">
                                 <p>&nbsp;</p>
-                                <button>
+                                <button onclick="saveButtonKey()">
                                     Save
                                 </button>
                             </div>
@@ -90,7 +93,7 @@
                             <input onchange="buttonTextValidation(this)">
                             <div id="buttonTextValidate">
                                 <p>&nbsp;</p>
-                                <button>
+                                <button onclick="saveButtonText()">
                                     Save
                                 </button>
                             </div>
