--- a/ui/ui_model.html
+++ b/ui/ui_model.html
@@ -3,8 +3,9 @@
         <title>RaspiMote ─ Config</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
-        <script src="showHide.js" type="text/javascript"></script>
-        <script src="saveButton.js" type="text/javascript"></script>
+        <script src="initElements.js" type="text/javascript" charset="utf-8"></script>
+        <script src="showHide.js" type="text/javascript" charset="utf-8"></script>
+        <script src="saveButton.js" type="text/javascript" charset="utf-8"></script>
         <script src="jquery-3.5.1.min.js" type="text/javascript"></script>
     </head>
 
@@ -27,19 +28,7 @@
             </tr>
             <tr>
                 <td class="content">
-                    <select name="Element ID" id="element" onchange="showButton(this)">
-                        <option value="none">
-                            &nbsp;
-                        </option>
-
-                        <option value="gpio_13">
-                            GPIO_13
-                        </option>
-
-                        <option value="adc_1">
-                            ADC_1
-                        </option>
-                    </select>
+                    <select name="Element ID" id="element" onchange="showButton(this)"></select>
                     <div id="typeButton">
                         <p>&nbsp;</p>
                         <select name="Action" id="buttonAction" onchange="showButtonPlus(this)">
