--- a/ui/ui_model.html
+++ b/ui/ui_model.html
@@ -77,6 +77,7 @@
                                     Save
                                 </button>
                             </div>
+                        </div>
                         <div id="buttonCustomFunction">
                             <p>&nbsp;</p>
                             <input onchange="buttonCustomValidation(this)">
