Add all kinds of requests

--- a/ui/ui_model.html
+++ b/ui/ui_model.html
@@ -60,7 +60,7 @@
                         </div>
                         <div id="buttonTypeText">
                             <p>&nbsp;</p>
-                            <input onchange="buttonTextValidation(this)">
+                            <input id="text" onchange="buttonTextValidation(this)">
                             <div id="buttonTextValidate">
                                 <p>&nbsp;</p>
                                 <button onclick="saveButtonText()">
@@ -70,7 +70,7 @@
                         </div>
                         <div id="buttonCommandFunction">
                             <p>&nbsp;</p>
-                            <input onchange="buttonCommandValidation(this)">
+                            <input id="command" onchange="buttonCommandValidation(this)">
                             <div id="buttonCommandValidate">
                                 <p>&nbsp;</p>
                                 <button onclick="saveButtonCommand()">
@@ -80,7 +80,7 @@
                         </div>
                         <div id="buttonCustomFunction">
                             <p>&nbsp;</p>
-                            <input onchange="buttonCustomValidation(this)">
+                            <input id="functionName" onchange="buttonCustomValidation(this)">
                             <div id="buttonCustomValidate">
                                 <p>&nbsp;</p>
                                 <button onclick="saveButtonCustom()">
