--- a/ui/ui_model.html
+++ b/ui/ui_model.html
@@ -8,6 +8,7 @@
         <script src="showHide.js" type="text/javascript" charset="utf-8"></script>
         <script src="saveButton.js" type="text/javascript" charset="utf-8"></script>
         <script src="jquery-3.5.1.min.js" type="text/javascript"></script>
+        <link rel="shortcut icon" href="../logo/RaspiMote_logo.ico" />
     </head>
 
     <body>
