--- a/ui/ui_model.html
+++ b/ui/ui_model.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>RaspiMote ─ Config</title>
+        <title>RaspiMote ─ configuration</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <script src="initElements.js" type="text/javascript" charset="utf-8"></script>
