--- a/driver/driver/lan_server/ui/ui_model.html
+++ b/driver/driver/lan_server/ui/ui_model.html
@@ -6,7 +6,10 @@
         <link rel="stylesheet" href="style.css">
         <script src="initElements.js" type="text/javascript" charset="utf-8"></script>
         <script src="showHide.js" type="text/javascript" charset="utf-8"></script>
+        <script src="showHideButton.js" type="text/javascript" charset="utf-8"></script>
+        <script src="showHideADC.js" type="text/javascript" charset="utf-8"></script>
         <script src="saveButton.js" type="text/javascript" charset="utf-8"></script>
+        <script src="saveADC.js" type="text/javascript" charset="utf-8"></script>
         <script src="jquery-3.5.1.min.js" type="text/javascript"></script>
         <link rel="shortcut icon" href="RaspiMote_logo.ico" />
     </head>
@@ -31,7 +34,12 @@
             </tr>
             <tr>
                 <td class="content">
-                    <select name="Element ID" id="element" onchange="showButton(this)"></select>
+                    <select name="Element ID" id="element" onchange="changeElement(this)"></select>
+
+
+
+                    
+                    <!-- FOR BUTTONS (= GPIO) -->
                     <div id="typeButton">
                         <p>&nbsp;</p>
                         <select name="Action" id="buttonAction" onchange="showButtonPlus(this)">
@@ -83,7 +91,7 @@
                         </div>
                         <div id="buttonCustomFunction">
                             <p>&nbsp;</p>
-                            <input id="functionName" onchange="buttonCustomValidation(this)">
+                            <input id="functionButtonName" onchange="buttonCustomValidation(this)">
                             <div id="buttonCustomValidate">
                                 <p>&nbsp;</p>
                                 <button onclick="saveButtonCustom()">
@@ -92,6 +100,47 @@
                             </div>
                         </div>
                     </div>
+
+
+
+
+                    <!-- FOR POTENTIOMETERS (= ADC) -->
+                    <div id="typeADC">
+                        <p>&nbsp;</p>
+                        <select name="Action" id="adcAction" onchange="showADCPlus(this)">
+                            <option value="none">
+                                &nbsp;
+                            </option>
+                            <option value="volume">
+                                Change volume
+                            </option>
+                            <option value="custom">
+                                Run custom function
+                            </option>
+                        </select>
+                        <div id="adcChangeVolume">
+                            <div id="adcVolumeValidate">
+                                <p>&nbsp;</p>
+                                <button onclick="saveADCVolume()">
+                                    Save
+                                </button>
+                            </div>
+                        </div>
+                        <div id="adcCustomFunction">
+                            <p>&nbsp;</p>
+                            <input id="functionADCName" onchange="adcCustomValidation(this)">
+                            <div id="adcCustomValidate">
+                                <p>&nbsp;</p>
+                                <button onclick="saveADCCustom()">
+                                    Save
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
                 </td>
             </tr>
         </table>
