--- a/driver/driver/lan_server/ui/ui_model.html
+++ b/driver/driver/lan_server/ui/ui_model.html
@@ -8,8 +8,10 @@
         <script src="showHide.js" type="text/javascript" charset="utf-8"></script>
         <script src="showHideButton.js" type="text/javascript" charset="utf-8"></script>
         <script src="showHideADC.js" type="text/javascript" charset="utf-8"></script>
+        <script src="showHideKeyboard.js" type="text/javascript" charset="utf-8"></script>
         <script src="saveButton.js" type="text/javascript" charset="utf-8"></script>
         <script src="saveADC.js" type="text/javascript" charset="utf-8"></script>
+        <script src="saveKeyboard.js" type="text/javascript" charset="utf-8"></script>
         <script src="jquery-3.5.1.min.js" type="text/javascript"></script>
         <link rel="shortcut icon" href="RaspiMote_logo.ico" />
     </head>
@@ -61,7 +63,7 @@
                         </select>
                         <div id="buttonPressKey">
                             <p>&nbsp;</p>
-                            <select name="Key" id="key" onchange="buttonKeyValidation(this)"></select>
+                            <select name="Key" id="buttonKey" onchange="buttonKeyValidation(this)"></select>
                             <div id="buttonKeyValidate">
                                 <p>&nbsp;</p>
                                 <button onclick="saveButtonKey()">
@@ -71,7 +73,7 @@
                         </div>
                         <div id="buttonTypeText">
                             <p>&nbsp;</p>
-                            <input id="text" onchange="buttonTextValidation(this)">
+                            <input id="buttonText" onchange="buttonTextValidation(this)">
                             <div id="buttonTextValidate">
                                 <p>&nbsp;</p>
                                 <button onclick="saveButtonText()">
@@ -81,7 +83,7 @@
                         </div>
                         <div id="buttonCommandFunction">
                             <p>&nbsp;</p>
-                            <input id="command" onchange="buttonCommandValidation(this)">
+                            <input id="buttonCommand" onchange="buttonCommandValidation(this)">
                             <div id="buttonCommandValidate">
                                 <p>&nbsp;</p>
                                 <button onclick="saveButtonCommand()">
@@ -118,13 +120,11 @@
                                 Run custom function
                             </option>
                         </select>
-                        <div id="adcChangeVolume">
-                            <div id="adcVolumeValidate">
-                                <p>&nbsp;</p>
-                                <button onclick="saveADCVolume()">
-                                    Save
-                                </button>
-                            </div>
+                        <div id="adcVolumeValidate">
+                            <p>&nbsp;</p>
+                            <button onclick="saveADCVolume()">
+                                Save
+                            </button>
                         </div>
                         <div id="adcCustomFunction">
                             <p>&nbsp;</p>
@@ -141,6 +141,67 @@
 
 
 
+                    <!-- FOR KEYBOARDS (= GPIO) -->
+                    <div id="typeKeyboard">
+                        <p>&nbsp;</p>
+                        <select name="Action" id="keyboardAction" onchange="showKeyboardPlus(this)">
+                            <option value="none">
+                                &nbsp;
+                            </option>
+                            <option value="key">
+                                Press key
+                            </option>
+                            <option value="text">
+                                Type text
+                            </option>
+                            <option value="command">
+                                Run command
+                            </option>
+                            <option value="custom">
+                                Run custom function
+                            </option>
+                        </select>
+                        <div id="keyboardPressKey">
+                            <p>&nbsp;</p>
+                            <select name="Key" id="keyboardKey" onchange="keyboardKeyValidation(this)"></select>
+                            <div id="keyboardKeyValidate">
+                                <p>&nbsp;</p>
+                                <button onclick="saveKeyboardKey()">
+                                    Save
+                                </button>
+                            </div>
+                        </div>
+                        <div id="keyboardTypeText">
+                            <p>&nbsp;</p>
+                            <input id="keyboardText" onchange="keyboardTextValidation(this)">
+                            <div id="keyboardTextValidate">
+                                <p>&nbsp;</p>
+                                <button onclick="saveKeyboardText()">
+                                    Save
+                                </button>
+                            </div>
+                        </div>
+                        <div id="keyboardCommandFunction">
+                            <p>&nbsp;</p>
+                            <input id="keyboardCommand" onchange="keyboardCommandValidation(this)">
+                            <div id="keyboardCommandValidate">
+                                <p>&nbsp;</p>
+                                <button onclick="saveKeyboardCommand()">
+                                    Save
+                                </button>
+                            </div>
+                        </div>
+                        <div id="keyboardCustomFunction">
+                            <p>&nbsp;</p>
+                            <input id="functionKeyboardName" onchange="keyboardCustomValidation(this)">
+                            <div id="keyboardCustomValidate">
+                                <p>&nbsp;</p>
+                                <button onclick="saveKeyboardCustom()">
+                                    Save
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </td>
             </tr>
         </table>
