--- a/driver/driver/lan_server/ui/ui_model.html
+++ b/driver/driver/lan_server/ui/ui_model.html
@@ -9,9 +9,11 @@
         <script src="showHideButton.js" type="text/javascript" charset="utf-8"></script>
         <script src="showHideADC.js" type="text/javascript" charset="utf-8"></script>
         <script src="showHideKeyboard.js" type="text/javascript" charset="utf-8"></script>
+        <script src="showHideGamepad.js" type="text/javascript" charset="utf-8"></script>
         <script src="saveButton.js" type="text/javascript" charset="utf-8"></script>
         <script src="saveADC.js" type="text/javascript" charset="utf-8"></script>
         <script src="saveKeyboard.js" type="text/javascript" charset="utf-8"></script>
+        <script src="saveGamepad.js" type="text/javascript" charset="utf-8"></script>
         <script src="jquery-3.5.1.min.js" type="text/javascript"></script>
         <link rel="shortcut icon" href="RaspiMote_logo.ico" />
     </head>
@@ -145,7 +147,7 @@
 
 
 
-                    <!-- FOR KEYBOARDS (= GPIO) -->
+                    <!-- FOR KEYBOARDS -->
                     <div id="typeKeyboard">
                         <p>&nbsp;</p>
                         <select name="Key" id="physicalKeyboardKey" onchange="showTypeKeyboardKey(this)"></select>
@@ -210,7 +212,85 @@
                             </div>
                         </div>
                     </div>
-                    
+
+
+
+
+                    <!-- FOR GAMEPADS -->
+                    <div id="typeGamepad">
+                        <p>&nbsp;</p>
+
+                        <!-- <img src="xbox_one.png" class="xbox_one" onclick="showTypeGamepadKey(this)"/> -->
+
+                        <canvas style="background-image: url('xbox_one.png'); height: 12vw; width: calc(1.597 * 12vw); background-size: contain; background-position: center; background-repeat: no-repeat;"></canvas>
+
+                        <!-- <select name="Key" id="gamepadKey" onchange="showTypeGamepadKey(this)"></select> -->
+
+                        <div id="typeGamepadKey">
+                            <p>&nbsp;</p>
+                            <select name="Action" id="gamepadAction" onchange="showGamepadPlus(this)">
+                                <option value="none">
+                                    &nbsp;
+                                </option>
+                                <option value="key">
+                                    Press key
+                                </option>
+                                <option value="text">
+                                    Type text
+                                </option>
+                                <option value="command">
+                                    Run command
+                                </option>
+                                <option value="custom">
+                                    Run custom function
+                                </option>
+                            </select>
+                            <div id="gamepadPressKey">
+                                <p>&nbsp;</p>
+                                <select name="Key" id="gamepadKey" onchange="gamepadKeyValidation(this)"></select>
+                                <div id="gamepadKeyValidate">
+                                    <p>&nbsp;</p>
+                                    <button onclick="saveGamepadKey()">
+                                        Save
+                                    </button>
+                                </div>
+                            </div>
+                            <div id="gamepadTypeText">
+                                <p>&nbsp;</p>
+                                <input id="gamepadText" onchange="gamepadTextValidation(this)">
+                                <div id="gamepadTextValidate">
+                                    <p>&nbsp;</p>
+                                    <button onclick="saveGamepadText()">
+                                        Save
+                                    </button>
+                                </div>
+                            </div>
+                            <div id="gamepadCommandFunction">
+                                <p>&nbsp;</p>
+                                <input id="gamepadCommand" onchange="gamepadCommandValidation(this)">
+                                <div id="gamepadCommandValidate">
+                                    <p>&nbsp;</p>
+                                    <button onclick="saveGamepadCommand()">
+                                        Save
+                                    </button>
+                                </div>
+                            </div>
+                            <div id="gamepadCustomFunction">
+                                <p>&nbsp;</p>
+                                <input id="functionGamepadName" onchange="gamepadCustomValidation(this)">
+                                <div id="gamepadCustomValidate">
+                                    <p>&nbsp;</p>
+                                    <button onclick="saveGamepadCustom()">
+                                        Save
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
                 </td>
             </tr>
         </table>
