--- a/driver/driver/lan_server/ui/ui_model.html
+++ b/driver/driver/lan_server/ui/ui_model.html
@@ -222,7 +222,7 @@
 
                         <!-- <img src="xbox_one.png" class="xbox_one" onclick="showTypeGamepadKey(this)"/> -->
 
-                        <canvas style="background-image: url('xbox_one.png'); height: 12vw; width: calc(1.597 * 12vw); background-size: contain; background-position: center; background-repeat: no-repeat;"></canvas>
+                        <canvas class="xbox_one" id="xbox_one_controller_canvas" onclick="showTypeGamepadKey(this)" onmousemove="test(this)"></canvas>
 
                         <!-- <select name="Key" id="gamepadKey" onchange="showTypeGamepadKey(this)"></select> -->
 
