Divide joys and buttons for gamepads in UI

--- a/driver/driver/lan_server/ui/ui_model.html
+++ b/driver/driver/lan_server/ui/ui_model.html
@@ -282,6 +282,10 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div id="typeGamepadJoy">
+                            <text>Not implemented for the moment.</text>
+                        </div>
                     </div>
 
 
