--- a/driver/driver/lan_server/ui/ui_model.html
+++ b/driver/driver/lan_server/ui/ui_model.html
@@ -284,7 +284,7 @@
                         </div>
 
                         <div id="typeGamepadJoy">
-                            <text>Not implemented for the moment.</text>
+                            <h2>Not implemented for the moment.</h2>
                         </div>
                     </div>
 
