--- a/driver/driver/lan_server/ui/ui_model.html
+++ b/driver/driver/lan_server/ui/ui_model.html
@@ -14,7 +14,9 @@
         <script src="saveADC.js" type="text/javascript" charset="utf-8"></script>
         <script src="saveKeyboard.js" type="text/javascript" charset="utf-8"></script>
         <script src="saveGamepad.js" type="text/javascript" charset="utf-8"></script>
-        <script src="jquery-3.5.1.min.js" type="text/javascript"></script>
+        <script src="jquery.js" type="text/javascript"></script>
+        <script src="sweetalert.js"></script>
+        <link rel="stylesheet" href="sweetalert.css">
         <link rel="shortcut icon" href="RaspiMote_logo.ico" />
     </head>
 
@@ -284,13 +286,36 @@
                         </div>
 
                         <div id="typeGamepadJoy">
-                            <h2>Not implemented for the moment.</h2>
+                            <p>&nbsp;</p>
+                            <select name="Action" id="gamepadJoyAction" onchange="showGamepadJoyPlus(this)">
+                                <option value="none">
+                                    &nbsp;
+                                </option>
+                                <option value="volume">
+                                    Change volume
+                                </option>
+                                <option value="custom">
+                                    Run custom function
+                                </option>
+                            </select>
+                            <div id="gamepadJoyVolumeValidate">
+                                <p>&nbsp;</p>
+                                <button onclick="saveGamepadJoyVolume()">
+                                    Save
+                                </button>
+                            </div>
+                            <div id="gamepadJoyCustomFunction">
+                                <p>&nbsp;</p>
+                                <input id="functionGamepadJoyName" onchange="gamepadJoyCustomValidation(this)">
+                                <div id="gamepadJoyCustomValidate">
+                                    <p>&nbsp;</p>
+                                    <button onclick="saveGamepadCustom()">
+                                        Save
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
-
-
-
-
                 </td>
             </tr>
         </table>
