Update behavior for "Generic USB" peripherals in UI

--- a/driver/driver/lan_server/ui/ui_model.html
+++ b/driver/driver/lan_server/ui/ui_model.html
@@ -44,7 +44,14 @@
             </tr>
             <tr>
                 <td class="content">
-                    <select name="Element ID" id="element" onchange="changeElement(this)"></select>
+                    <select name="Element" id="element" onchange="changeElement(this)"></select>
+
+
+
+                    <div name="Do it yourself 🙃" id="genericUSBDIY">
+                        <p>&nbsp;</p>
+                        <text>You can replace this by anything, depending on the kind of USB peripheral you want to use. Be creative!</text>
+                    </div>
 
 
 
@@ -149,7 +156,7 @@
 
 
 
-                    <!-- FOR KEYBOARDS -->
+                    <!-- FOR KEYBOARDS AND MICE -->
                     <div id="typeKeyboard">
                         <p>&nbsp;</p>
                         <select name="Key" id="physicalKeyboardKey" onchange="showTypeKeyboardKey(this)"></select>
